mongo errors workarounds.